# CSE310Project2

./: CMakeLists.txt  README.md  sprinttimelog.md
Connect4/: Board.cpp  Board.h  ComputerPlayer.cpp  ComputerPlayer.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  main.cpp
Practice/: HelloWorld.cpp
